--- a/css.css
+++ b/css.css
@@ -1,9 +1,9 @@
 /* iPad: 834px, desktop:1440px*/
 
-body{
+body {
   background-image: url(./image/b63053c6-428b-4cf7-a82c-8a1dcd2371db_m.jpg);
   background-repeat: no-repeat;
-  background-attachment: fixed; 
+  background-attachment: fixed;
   background-size: 100% 100%;
 }
 
@@ -35,11 +35,11 @@ body{
   margin-bottom: 6px;
 }
 
-.testbutton{
+.testbutton {
   display: none;
 }
 
-.search-bar{
+.search-bar {
   display: none;
 }
 
@@ -63,7 +63,7 @@ body{
 }
 
 @media only screen and (min-width: 834px) {
-  .testbutton{
+  .testbutton {
     display: block;
   }
 
@@ -75,139 +75,142 @@ body{
 /* Desktop - navbar */
 
 @media only screen and (min-width: 1440px) {
-  .search-bar{
+  .search-bar {
     display: block;
   }
 }
 
 /*---Task---*/
-.grid-container{
+.grid-container {
   display: none;
 }
 
-.mobliem{
+.mobliem {
   display: block;
 }
 
 /* moblie mainbanner */
 
-#todo-tab{
-  background-color: hsl(183, 100%, 52%) ;
+#todo-tab {
+  background-color: hsl(183, 100%, 52%);
   color: white;
 }
 
-#doing-tab{
-  background-color: hsl(161, 100%, 64%) ;
+#doing-tab {
+  background-color: hsl(161, 100%, 64%);
   color: white;
 }
 
-#done-tab{
-  background-color: hsl(39, 100%, 50% );
+#done-tab {
+  background-color: hsl(39, 100%, 50%);
   color: white;
 }
 
-#overdue-tabb{
-  background-color: hsl(0, 100%, 50%) ;
+#overdue-tabb {
+  background-color: hsl(0, 100%, 50%);
   color: white;
 }
 
 /* mbolie main */
-#todo-tab-pane{
+#todo-tab-pane {
+  background-color: hsl(161, 100%, 64%, 0.3);
 
-  background-color: hsl(161, 100%, 64%, 0.3) ;
-  
   height: 1000px;
 }
 
+#doing-tab-pane {
+  background-color: hsl(183, 100%, 52%, 0.3);
 
-#doing-tab-pane{
-
-  background-color:hsl(183, 100%, 52%,0.3) ;
-  
   height: 1000px;
 }
 
+#done-tab-pane {
+  background-color: hsl(39, 100%, 50%, 0.3);
 
-#done-tab-pane{
-
-  background-color: hsl(39, 100%, 50% , 0.3) ;
-  
   height: 1000px;
 }
 
-#overdue-tab-panee{
+#overdue-tab-panee {
+  background-color: hsl(0, 100%, 50%, 0.3);
 
-  background-color: hsl(0, 100%, 50%, 0.3) ;
-  
   height: 1000px;
+}
+
+.mystyle {
+  width: 10rem;
+  padding: 25px;
+  background-color: coral;
+  color: white;
+  font-size: 25px;
+  box-sizing: border-box;
 }
 
 /* iPad & Desktop - task */
 
 @media only screen and (min-width: 834px) {
-  .mobliem{
+  .mobliem {
     display: none;
   }
 
-  .grid-container{
+  .grid-container {
     display: grid;
     column-gap: 50px;
-    grid-template-columns:  1fr 1fr 1fr 1fr;
-  
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+
     padding: 20px;
   }
-  
+
   .grid-item {
-    background-color: #D9D9D9;opacity:0.6;
-      border: 1px solid rgba(0, 0, 0, 0.8);
-     
-      font-size: 30px;
-     height: 1000px;    
+    background-color: #d9d9d9;
+    opacity: 0.6;
+    border: 1px solid rgba(0, 0, 0, 0.8);
+
+    font-size: 30px;
+    height: 1000px;
   }
-  
-  .item1{
+
+  .item1 {
     display: grid;
     grid-area: 1 / 1 / 10 / 2;
-  
+
     padding: 20px 5px;
-    background-color: #2EC6F5;
+    background-color: #2ec6f5;
     text-align: center;
-    
+
     color: white;
     width: 100%;
   }
-  
-  .item2{
+
+  .item2 {
     display: grid;
     grid-area: 1 / 2 / 10 / 3;
     padding: 20px 5px;
-    background-color: #01FFC2;
+    background-color: #01ffc2;
     text-align: center;
-    
+
     color: white;
     width: 100%;
   }
-  
-  .item3{
+
+  .item3 {
     display: grid;
     grid-area: 1 / 3 / 10 / 4;
     padding: 20px 5px;
-    background-color: #FFC01D;
+    background-color: #ffc01d;
     text-align: center;
-    
+
     color: white;
     width: 100%;
   }
-  
-  .item4{
+
+  .item4 {
     display: grid;
     grid-area: 1 / 4 / 10 / 5;
     padding: 20px 5px;
-    background-color: #FF1111;
+    background-color: #ff1111;
     text-align: center;
-    
+
     color: white;
     width: 100%;
   }
 }
-
